--- a/qros/package.xml
+++ b/qros/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>template_pkg</name>
+  <name>qros</name>
   <version>1.0.0</version>
   <description>A Template ROS2 Package </description>
   <maintainer email="kris@todo.com">Kristopher kkrasnosky</maintainer>
@@ -9,7 +9,7 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend> acoustic_msgs </depend>
+  <depend> qros_interfaces </depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
