--- a/qros_interfaces/package.xml
+++ b/qros_interfaces/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>template_pkg_interfaces</name>
+  <name>qros_interfaces</name>
   <version>0.1.0</version>
   <description>template_pkg interface definitions</description>
   <maintainer email="kris@todo.com">Kristopher kkrasnosky</maintainer>
