Added valve_msg pub and sensor_msgs temp/pressure subs

--- a/qros/CMakeLists.txt
+++ b/qros/CMakeLists.txt
@@ -8,7 +8,9 @@ set(ROS_DEPENDS
     ament_cmake
     rclcpp
     std_msgs
+    sensor_msgs
     qros_interfaces
+    hydraulic_interfaces
   )
 
 set(EXTERNAL_DEPENDS
