--- a/qros/package.xml
+++ b/qros/package.xml
@@ -12,6 +12,8 @@
   <depend> qros_interfaces </depend>
   <depend> rclcpp </depend>
   <depend> std_msgs </depend>
+  <depend> sensor_msgs </depend>
+  <depend> hydraulic_interfaces </depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
