--- a/qros/package.xml
+++ b/qros/package.xml
@@ -13,6 +13,7 @@
   <depend> rclcpp </depend>
   <depend> std_msgs </depend>
   <depend> sensor_msgs </depend>
+  <depend> diagnostic_msgs </depend>
   <depend> hydraulic_interfaces </depend>
 
   <test_depend>ament_lint_auto</test_depend>
