--- a/qros/package.xml
+++ b/qros/package.xml
@@ -16,6 +16,7 @@
   <depend> diagnostic_msgs </depend>
   <depend> hydraulic_interfaces </depend>
   <depend> nav_msgs </depend>
+  <depend> io_interfaces </depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
