--- a/qros/CMakeLists.txt
+++ b/qros/CMakeLists.txt
@@ -14,6 +14,8 @@ set(ROS_DEPENDS
     hydraulic_interfaces
     nav_msgs
     io_interfaces
+    geometry_msgs
+    propulsion_interfaces
   )
 
 set(EXTERNAL_DEPENDS
